--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   padding: 30px;
   margin: 0;
   box-sizing: border-box;
@@ -74,6 +74,7 @@ form {
 }
 
 @media screen and (max-width: 786px) {
+
   .container {
     flex-direction: column;
     padding: 0;
@@ -87,4 +88,4 @@ form {
   header {
     margin: 0;
   }
-}
+} */
