Add styling for project

--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-/* body {
+body {
   padding: 30px;
   margin: 0;
   box-sizing: border-box;
@@ -88,4 +88,4 @@ form {
   header {
     margin: 0;
   }
-} */
+}
