--- a/src/style.css
+++ b/src/style.css
@@ -32,11 +32,27 @@ header {
   border-radius: 0;
   border: 2px solid black;
   padding: 5px;
+  transition: 0.5s;
+}
+
+.btn:hover,
+.submit:hover {
   box-shadow: 3px 3px 3px black;
+}
+
+.loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 100px;
+  font-weight: bold;
+  font-size: 30px;
 }
 
 .list-container {
   border: 2px solid black;
+  height: 300px;
+  overflow-y: scroll;
 }
 
 .list {
